openshift-ressources/policy-management-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: policy-management-frontend
  name: policy-management-frontend
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: policy-management-frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: policy-management-frontend
        deploymentconfig: policy-management-frontend
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - env:
        - name: VUE_APP_POLICY_MANAGEMENT_BACKEND
          value: http://policy-management-backend-lakeside-mutual.apps.cluster-paris-3e9b.paris-3e9b.example.opentlc.com
        image: image-registry.openshift-image-registry.svc:5000/lakeside-mutual/policy-management-frontend
        imagePullPolicy: Always
        name: policy-management-frontend
        ports:
        - containerPort: 3010
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
