openshift-ressources/policy-management-frontend/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: policy-management-frontend
  name: policy-management-frontend
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 3010
  selector:
    app: policy-management-frontend
    deploymentconfig: policy-management-frontend
  sessionAffinity: None
  type: ClusterIP
