openshift-ressources/policy-management-frontend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: policy-management-frontend
  name: policy-management-frontend
spec:
  host: policy-management-frontend-lakeside-mutual.apps.cluster-paris-3e9b.paris-3e9b.example.opentlc.com
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: policy-management-frontend
    weight: 100
  wildcardPolicy: None
